objects/ASI_KOR_Visitation_Plan_Detail__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Combined_Comment__c</fullName>
        <label>Combined Comment</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_Cancel_Type__c</fullName>
        <label>Cancel Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Company Event</fullName>
                </value>
                <value>
                    <fullName>Company Holiday</fullName>
                </value>
                <value>
                    <fullName>Personal Leave</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_Confirmed_Visitation_Plan__c</fullName>
        <formula>ASI_KOR_Visitation_Plan__r.ASI_KOR_Confirmed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Confirmed Visitation Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_IncentivesnPromotionsComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Incentives and Promotions Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_Listing_Comment__c</fullName>
        <label>Listing Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_Listing_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Listing Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_Market_Information_Comment__c</fullName>
        <label>Market Information Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_Market_Information_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Market Information Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_Negotiation_Contract_Comment__c</fullName>
        <label>Negotiation Contract Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_Negotiation_Contract_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Negotiation Contract Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_Overall_Comment__c</fullName>
        <label>Overall Comment</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_POS_Comment__c</fullName>
        <label>POS Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_POS_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>POS Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_PRK_Volume_Comment__c</fullName>
        <label>PRK Volume Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_PRK_Volume_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PRK Volume Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_RelationshipBuilding_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Relationship  Building Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_Relationship_Building_Comment__c</fullName>
        <label>Relationship Building Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_Report_Status__c</fullName>
        <formula>IF( AND( TEXT(ASI_KOR_Status__c)=&apos;Planned&apos; , ASI_KOR_Visit_Date__c &lt; Today() ), &apos;Outstanding&apos;, Text(ASI_KOR_Status__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_Venue_Check_Comment__c</fullName>
        <label>Venue Check Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_Venue_Check_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Venue Check	Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_Visibility_Comment__c</fullName>
        <label>Visibility Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_Visibility_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visibility	Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_Visit_Date_Time_From__c</fullName>
        <label>Actual Visit Date (From)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_Visit_Date_Time_To__c</fullName>
        <label>Actual Visit Date (To)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Owner_Username__c</fullName>
        <formula>ASI_KOR_Visitation_Plan__r.Owner:User.Username</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Username</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Account_Address__c</fullName>
        <formula>ASI_KOR_Wholesaler__r.ASI_KOR_Address__c</formula>
        <label>Account Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Account_Record_Type__c</fullName>
        <formula>ASI_KOR_Wholesaler__r.RecordType.Name</formula>
        <label>Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Achievement_Detail__c</fullName>
        <label>Achievement Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Achievement_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Achievement Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Activity_Type__c</fullName>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Regular Visit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_KOR_Cancellation_Reason__c</fullName>
        <label>Cancellation Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Customer_Code__c</fullName>
        <formula>ASI_KOR_Wholesaler__r.ASI_KOR_Customer_Code__c</formula>
        <label>Customer Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Meeting_Notes__c</fullName>
        <label>Meeting Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Memo__c</fullName>
        <label>Memo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Objective_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Objective Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Outstanding</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Achieved</fullName>
                </value>
                <value>
                    <fullName>Planned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_KOR_Subject__c</fullName>
        <defaultValue>&apos;Account Visitation&apos;</defaultValue>
        <label>Subject</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Visit_Date__c</fullName>
        <defaultValue>today()</defaultValue>
        <label>Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Visit_Objective__c</fullName>
        <label>Visit Objective</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Visitation_Plan__c</fullName>
        <label>Visitation Plan</label>
        <referenceTo>ASI_KOR_Visitation_Plan__c</referenceTo>
        <relationshipLabel>Visitation Plan Details</relationshipLabel>
        <relationshipName>ASI_KOR_Visitation_Plan_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Wholesaler__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Visitation Plan Details</relationshipLabel>
        <relationshipName>Visitation_Plan_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_KR_Incentives_and_Promotions_Comment__c</fullName>
        <label>Incentives and Promotions Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_KR_Negotiation_NonContract_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Negotiation Non-Contract Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_KR_Negotiation_Non_Contract_Comment__c</fullName>
        <label>Negotiation Non-Contract Comment</label>
        <type>TextArea</type>
    </fields>
    <label>Visitation Plan Detail</label>
    <nameField>
        <displayFormat>VPD-{00000}</displayFormat>
        <label>Visitation Plan Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visitation Plan Details</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_KR_Visitation_Plan_Detail_Ad_Hoc</fullName>
        <active>true</active>
        <label>Visitation Plan Detail- Ad-Hoc</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_KR_Visitation_Plan_Detail_Call_Plan</fullName>
        <active>true</active>
        <label>Visitation Plan Detail- Call Plan</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ASI_CRM_KR_ADHocValidation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(CONTAINS( RecordType.DeveloperName, &apos;ASI_CRM_KR_Visitation_Plan_Detail_Ad_Hoc&apos;),ISPICKVAL(ASI_KOR_Status__c, &quot;&quot;), !CONTAINS($Profile.Name,&apos;Administrator&apos;))</errorConditionFormula>
        <errorDisplayField>ASI_KOR_Status__c</errorDisplayField>
        <errorMessage>Status cannot be null!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_KR_AccountOwnerValidation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ASI_KOR_Wholesaler__r.Owner.Id &lt;&gt; ASI_KOR_Visitation_Plan__r.OwnerId ,!CONTAINS($Profile.Name,&apos;Administrator&apos;), !$Permission.ASI_CRM_KR_Edit_Visitation_Plan_Detail )</errorConditionFormula>
        <errorDisplayField>ASI_KOR_Wholesaler__c</errorDisplayField>
        <errorMessage>Please select your own account(s)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_KR_AchievedPlanChecking</fullName>
        <active>true</active>
        <description>Users can change the status to &quot;Achieved&quot; even they don&apos;t check one of call objectives.</description>
        <errorConditionFormula>AND(!CONTAINS($Profile.Name,&apos;Administrator&apos;),ISPICKVAL(ASI_KOR_Status__c, &quot;Achieved&quot;) , !ASI_CRM_KR_PRK_Volume_Complete__c ,! ASI_CRM_KR_Market_Information_Complete__c ,! ASI_CRM_KR_Listing_Complete__c ,! ASI_CRM_KR_POS_Complete__c ,! ASI_CRM_KR_Visibility_Complete__c ,! ASI_CRM_KR_IncentivesnPromotionsComplete__c ,! ASI_CRM_KR_RelationshipBuilding_Complete__c ,! ASI_CRM_KR_Negotiation_Contract_Complete__c ,! ASI_KR_Negotiation_NonContract_Complete__c ,! ASI_CRM_KR_Venue_Check_Complete__c )</errorConditionFormula>
        <errorMessage>Please check one of call objectives.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_KR_Call_Objective_Checking</fullName>
        <active>true</active>
        <errorConditionFormula>AND( !ASI_KOR_Visitation_Plan__r.ASI_KOR_Confirmed__c , !CONTAINS($Profile.Name,&apos;Administrator&apos;), OR(ISCHANGED( ASI_CRM_KR_Market_Information_Complete__c ),ISCHANGED( ASI_CRM_KR_PRK_Volume_Complete__c ),ISCHANGED( ASI_CRM_KR_Listing_Complete__c ) ,ISCHANGED( ASI_CRM_KR_POS_Complete__c ) ,ISCHANGED( ASI_CRM_KR_Visibility_Complete__c ) ,ISCHANGED( ASI_CRM_KR_IncentivesnPromotionsComplete__c ) , ISCHANGED( ASI_CRM_KR_RelationshipBuilding_Complete__c ) ,ISCHANGED( ASI_KR_Negotiation_NonContract_Complete__c ) ,ISCHANGED( ASI_CRM_KR_Negotiation_Contract_Complete__c ) ,ISCHANGED( ASI_CRM_KR_Venue_Check_Complete__c ) ) )</errorConditionFormula>
        <errorMessage>The Visitation Plan have not confirmed, cannot edit Call Objective</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_KR_CancelledPlanValidation</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(ASI_KOR_Status__c, &quot;Cancelled&quot;) &amp;&amp; ISPICKVAL(PRIORVALUE( ASI_KOR_Status__c), &quot;&quot;)&amp;&amp; !CONTAINS($Profile.Name,&apos;Administrator&apos;)&amp;&amp;
ASI_KOR_Visitation_Plan__r.ASI_KOR_Confirmed__c</errorConditionFormula>
        <errorDisplayField>ASI_KOR_Status__c</errorDisplayField>
        <errorMessage>Cannot change Plan from new Event to Cancelled</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_KR_CancelledRequiredField</fullName>
        <active>true</active>
        <description>ASI_CRM_KR_CancelledRequiredField</description>
        <errorConditionFormula>ISPICKVAL(ASI_KOR_Status__c, &apos;Cancelled&apos;) &amp;&amp;  OR(  ISPICKVAL ( ASI_CRM_KR_Cancel_Type__c,&apos;&apos; ),  ISBLANK( ASI_KOR_Cancellation_Reason__c ) )&amp;&amp; !CONTAINS($Profile.Name,&apos;Administrator&apos;)</errorConditionFormula>
        <errorMessage>Please Input Cancel Type and Cancellation Reason.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_KR_ChangeAchievedPlan</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISPICKVAL(PRIORVALUE( ASI_KOR_Status__c), &quot;Achieved&quot;)
, ISCHANGED(ASI_KOR_Status__c) ,!CONTAINS($Profile.Name,&apos;Administrator&apos;))</errorConditionFormula>
        <errorDisplayField>ASI_KOR_Status__c</errorDisplayField>
        <errorMessage>Cannot change Status in Achieved Plan.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_KR_ChangeCancelledPlan</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(PRIORVALUE( ASI_KOR_Status__c), &quot;Cancelled&quot;), ISCHANGED(ASI_KOR_Status__c) ,!CONTAINS($Profile.Name,&apos;Administrator&apos;))</errorConditionFormula>
        <errorDisplayField>ASI_KOR_Status__c</errorDisplayField>
        <errorMessage>Cannot change Status in Cancelled Plan.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_KR_ConfirmedPlanChecking</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(ASI_KOR_Status__c, &quot;&quot;) &amp;&amp; ISPICKVAL(PRIORVALUE( ASI_KOR_Status__c), &quot;Cancelled&quot;)&amp;&amp; !CONTAINS($Profile.Name,&apos;Administrator&apos;)&amp;&amp; 
ASI_KOR_Visitation_Plan__r.ASI_KOR_Confirmed__c</errorConditionFormula>
        <errorDisplayField>ASI_KOR_Status__c</errorDisplayField>
        <errorMessage>Cannot change Plan from Cancelled to new Event, because Plan is confirmed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_KR_EditNewEventPlanValidation</fullName>
        <active>true</active>
        <description>ASI_CRM_KR_EditNewEventPlanValidation</description>
        <errorConditionFormula>ISPICKVAL( ASI_KOR_Status__c , &apos;&apos;) &amp;&amp; !ISNEW()  &amp;&amp; ASI_KOR_Visitation_Plan__r.ASI_KOR_Confirmed__c != TRUE &amp;&amp; !CONTAINS($Profile.Name,&apos;Administrator&apos;)</errorConditionFormula>
        <errorMessage>Cannot edit New Event Plan.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_KR_NewStatusToCancelled</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(ASI_KOR_Status__c, &quot;Cancelled&quot;) &amp;&amp; ISPICKVAL(PRIORVALUE( ASI_KOR_Status__c), &quot;&quot;)&amp;&amp; !CONTAINS($Profile.Name,&apos;Administrator&apos;)</errorConditionFormula>
        <errorDisplayField>ASI_KOR_Status__c</errorDisplayField>
        <errorMessage>Cannot change status from New Event to Cancelled !</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_KR_PlannedToNewEvent</fullName>
        <active>true</active>
        <description>ASI_CRM_KR_PlannedToNewEvent</description>
        <errorConditionFormula>ISPICKVAL(ASI_KOR_Status__c, &quot;&quot;) &amp;&amp; ISPICKVAL(PRIORVALUE( ASI_KOR_Status__c), &quot;Planned&quot;)&amp;&amp; !CONTAINS($Profile.Name,&apos;Administrator&apos;)&amp;&amp; 
ASI_KOR_Visitation_Plan__r.ASI_KOR_Confirmed__c</errorConditionFormula>
        <errorDisplayField>ASI_KOR_Status__c</errorDisplayField>
        <errorMessage>Cannot change status from Planned to New status!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_KR_PlannedValidation</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(ASI_KOR_Status__c, &quot;Planned&quot;) &amp;&amp; ASI_KOR_Visitation_Plan__r.ASI_KOR_Confirmed__c != TRUE &amp;&amp; !CONTAINS($Profile.Name,&apos;Administrator&apos;)</errorConditionFormula>
        <errorDisplayField>ASI_KOR_Status__c</errorDisplayField>
        <errorMessage>Cannot change to Planned, because Plan is not yet confirmed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_KOR_CannotEditConfirmed</fullName>
        <active>false</active>
        <description>Should not update confirmed visitations</description>
        <errorConditionFormula>ASI_KOR_Visitation_Plan__r.ASI_KOR_Confirmed__c == TRUE</errorConditionFormula>
        <errorMessage>The visitation plan is already confirmed and copied to visitation events.</errorMessage>
    </validationRules>
</CustomObject>